changed header height

--- a/css/styles.css
+++ b/css/styles.css
@@ -42,7 +42,7 @@ main ul {
 /* text elements */
 header {
 	text-align: center;
-	padding: 100px;
+	height: 771.297px;
 	max-width: 100%;
 	max-height: 100%;
 	background-color: #B0E0D0;
