--- a/css/styles.css
+++ b/css/styles.css
@@ -43,6 +43,7 @@ main ul {
 header {
 	text-align: center;
 	height: 771.297px;
+	padding: 15px;
 	max-width: 100%;
 	max-height: 100%;
 	background-color: #B0E0D0;
